[package]
name = "terminus_bl"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { git = "https://github.com/luojia65/rustsbi" }
spin = "0.7"
linked_list_allocator = "0.8"
embedded-hal = "1.0.0-alpha.1"
lazy_static = { version = "1", features = ["spin_no_std"] }
nb = "1"

[features]
panic-full = []